--- a/CM.Deploy.UI/DeployForm.xaml
+++ b/CM.Deploy.UI/DeployForm.xaml
@@ -2,9 +2,32 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="Deploy" Height="434" Width="497">
-    <Grid>
-        <Label Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" Name="label1" VerticalAlignment="Top" Width="120">Choose an environment file:</Label>
-        <TextBox Height="23" Margin="147,12,208,0" Name="environmentTextBox" VerticalAlignment="Top" />
-        <Button Height="23" HorizontalAlignment="Left" Margin="20,56,0,0" Name="deployButton" VerticalAlignment="Top" Width="75">Deploy</Button>
+    <Grid Height="418">
+        <StackPanel>
+            <GroupBox Header="Load configuration settings" Margin="5" VerticalAlignment="Top">
+                <StackPanel Margin="0">
+                    <StackPanel Orientation="Horizontal" Margin="0">
+                        <RadioButton Name="uxEnvironmentsRadio" Click="ClickRadio" GroupName="ConfigLoad" IsChecked="True" Margin="10,10,10,0" HorizontalAlignment="Left" VerticalAlignment="Top">Use packaged config for environment:</RadioButton>
+                        <ComboBox Name="uxEnvironments" Margin="0,10,10,0" HorizontalAlignment="Right" VerticalAlignment="Top" Width="235"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0">
+                        <RadioButton Name="uxFileRadio" Click="ClickRadio" GroupName="ConfigLoad" Margin="10,10,10,0" HorizontalAlignment="Left" VerticalAlignment="Top">Load from external file:</RadioButton>
+                        <TextBox Name="uxConfigFile" Margin="0,10,0,0" HorizontalAlignment="Right" VerticalAlignment="Top" Width="285" />
+                        <Button Name="uxLoadFileButton" Click="LoadConfigFile" Margin="2,10,0,0" HorizontalAlignment="Right" VerticalAlignment="Top" Width="20" Height="20" >...</Button>
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Configuration properties" Margin="5" Height="250">
+                <ListView Name="uxProperties">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Width="140" Header="Key" DisplayMemberBinding="{Binding Key}" />
+                            <GridViewColumn Width="310" Header="Value" DisplayMemberBinding="{Binding Value}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </GroupBox>
+            <Button Name="uxDeploy" Margin="0,5,5,0" HorizontalAlignment="Right" VerticalAlignment="Top">Deploy</Button>
+        </StackPanel>
     </Grid>
 </Window>
